--- a/style.css
+++ b/style.css
@@ -1,26 +1,12 @@
-/*
-html {
-    display: table;
-    margin: auto;
-}
-*/
-
 body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777;
     background-color: #777;
     width: 960px;
     font-size: 18px;
-    /*
-    display: table-cell;
-    vertical-align: middle;
-    margin-top: 20px;
-    */
-    margin-left: 200px;
-    margin-right: 200px;
+    margin: 0 auto;
 }
     
-
 header, nav, section, aside, footer {
     background: #ebebeb;
     text-align: center;
