--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
 body {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777;
+    margin: 0;
+    padding: 0;
     background-color: #777;
+    /* font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777;
     width: 960px;
     font-size: 18px;
+    margin: 0 auto; */
+}
+
+.container {
+    width: 960px;
     margin: 0 auto;
+    background-color: #777;
 }
     
 header, nav, section, aside, footer {
     background: #ebebeb;
     text-align: center;
 }
-
+/* 
 article {
     color: #ebebeb;
     background: #777;
@@ -63,4 +71,4 @@ footer {
 .howhigh {
     height: 75px;
     width: 960px;
-}
+} */
